# cprel-packages

./: CMakeLists.txt
cmake-support/: FindCPRel.cmake  FindGecode.cmake
cudf/: CMakeLists.txt  cudf.hh  cudf.l  cudf.y  cudf_hash_table.c  cudf_hash_table.cpp  cudf_hash_table.h  cudf_hash_table.hh  cudf_tools.c  cudf_tools.cpp  model.cpp  model.hh  virtual_model.cpp  virtual_model.hh
doc/: heuristic.org  statistics.org
gephi/: CMakeLists.txt  test.cpp
graph-view/: graph-view.hh
libgexf/: CMakeLists.txt
solver/: solver.cpp  solver.hh
solver-ap/: CMakeLists.txt  impact.cpp  impact.hh  splitter.cpp
solver-cpint-paranoid/: CMakeLists.txt  brancher.cpp  paranoid.cpp
solver-cprel-paranoid/: CMakeLists.txt  paranoid.cpp  paranoid.hh  solver-branch.cpp  solver-handlers.cpp  solver-opt.cpp  solver.cpp  solver.hh
solver-cprel-paranoid/branch/: choice.hh  existingInstall.cpp  existingInstallGraph.cpp  minimalChanges.cpp  stableProvides.cpp
solver-cprel-paranoid/prop/: conflicts.cpp  conflicts.hh  dependencies.cpp  dependencies.hh  provides.cpp  provides.hh
solver-lp-paranoid/: CMakeLists.txt  paranoid.cpp
solver/branch/: stableProvides.cpp
solver/prop/: conflicts.cpp  conflicts.hh  dependencies.cpp  dependencies.hh  provides.cpp  provides.hh
solversupport/: pkg-builtins.hh  reader.hh
tools/: CMakeLists.txt  cudfstats.cpp  graphview.cpp  pkgviz.cpp  profiler.cpp  solver.cpp  stats.cpp
